--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@ def oauth_callback():
         return "Authorization failed."
 
 if __name__ == '__main__':
-    app.run(debug=True)
+    app.run(host='0.0.0.0', debug=True)
